tests/integration-module-resolver-reload/integration-module-resolver-reload.exp
Error ------------------------------------------------------------------------------------------------- hello.foo.js:3:9

Cannot resolve module `<OUT_PARENT_DIR>/integration-module-resolver-reload/world.wrong.js`.

   3| require('world');
              ^^^^^^^


Error ------------------------------------------------------------------------------------------------- world.foo.js:3:9

Cannot resolve module `<OUT_PARENT_DIR>/integration-module-resolver-reload/hello.wrong.js`.

   3| require('hello');
              ^^^^^^^



Found 2 errors
No errors!
